--- a/OREAnalytics/OREAnalytics.vcxproj.filters
+++ b/OREAnalytics/OREAnalytics.vcxproj.filters
@@ -328,10 +328,14 @@
     <ClCompile Include="orea\scenario\spreadscenariofactory.cpp">
       <Filter>scenario</Filter>
     </ClCompile>
-    <ClCompile Include="orea\aggregation\dimcalculator.cpp" />
-    <ClCompile Include="orea\aggregation\dimregressioncalculator.cpp" />
     <ClCompile Include="orea\app\xvarunner.cpp">
       <Filter>app</Filter>
+    </ClCompile>
+    <ClCompile Include="orea\aggregation\dimcalculator.cpp">
+      <Filter>aggregation</Filter>
+    </ClCompile>
+    <ClCompile Include="orea\aggregation\dimregressioncalculator.cpp">
+      <Filter>aggregation</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
