--- a/QuantExt/QuantExt.vcxproj.filters
+++ b/QuantExt/QuantExt.vcxproj.filters
@@ -948,6 +948,9 @@
     <ClInclude Include="qle\models\projectedcrossassetmodel.hpp">
       <Filter>models</Filter>
     </ClInclude>
+    <ClInclude Include="qle\models\yoyswaphelper.hpp">
+      <Filter>models</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="cashflows">
@@ -1616,6 +1619,9 @@
       <Filter>termstructures</Filter>
     </ClCompile>
     <ClCompile Include="qle\models\projectedcrossassetmodel.cpp">
+      <Filter>models</Filter>
+    </ClCompile>
+    <ClCompile Include="qle\models\yoyswaphelper.cpp">
       <Filter>models</Filter>
     </ClCompile>
   </ItemGroup>
