--- a/Tools/PythonTools/comparison_config.json
+++ b/Tools/PythonTools/comparison_config.json
@@ -340,7 +340,22 @@
             "rel_tol": null
           }
         ]
-      }
+      },
+      "sa_cva_pricer.csv": {
+        "keys": [
+          "RiskType",
+	  "Bucket"
+        ],
+        "column_settings": [
+          {
+            "names": [
+              "Value"
+            ],
+            "abs_tol": 0.00001,
+            "rel_tol": null
+          }
+        ]
+      },
     }
   }
 }
