--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="ored\model\calibrationinstrumentfactory.hpp" />
     <ClInclude Include="ored\model\calibrationinstruments\cpicapfloor.hpp" />
     <ClInclude Include="ored\model\calibrationinstruments\yoycapfloor.hpp" />
+    <ClInclude Include="ored\model\calibrationinstruments\yoyswap.hpp" />
     <ClInclude Include="ored\model\crossassetmodelbuilder.hpp" />
     <ClInclude Include="ored\model\crossassetmodeldata.hpp" />
     <ClInclude Include="ored\model\eqbsbuilder.hpp" />
@@ -265,6 +266,7 @@
     <ClCompile Include="ored\model\calibrationinstrumentfactory.cpp" />
     <ClCompile Include="ored\model\calibrationinstruments\cpicapfloor.cpp" />
     <ClCompile Include="ored\model\calibrationinstruments\yoycapfloor.cpp" />
+    <ClCompile Include="ored\model\calibrationinstruments\yoyswap.cpp" />
     <ClCompile Include="ored\model\crossassetmodelbuilder.cpp" />
     <ClCompile Include="ored\model\crossassetmodeldata.cpp" />
     <ClCompile Include="ored\model\eqbsbuilder.cpp" />
