--- a/Tools/PythonTools/comparison_config.json
+++ b/Tools/PythonTools/comparison_config.json
@@ -321,6 +321,23 @@
             "rel_tol": null
           }
         ]
+      },
+      "dim_evolution.csv": {
+        "keys": [
+          "TimeStep"
+        ],
+        "column_settings": [
+          {
+            "names": [
+              "ZeroOrderDIM",
+              "AverageDIM",
+              "AverageFLOW",
+              "SimpleDIM"
+            ],
+            "abs_tol": 0.0001,
+            "rel_tol": null
+          }
+        ]
       }
     }
   }
