[Touch:1264]Add JY calibration and example.

--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="ored\marketdata\inflationcapfloorvolcurve.hpp" />
     <ClInclude Include="ored\marketdata\yieldvolcurve.hpp" />
     <ClInclude Include="ored\model\calibrationbasket.hpp" />
+    <ClInclude Include="ored\model\calibrationconfiguration.hpp" />
     <ClInclude Include="ored\model\calibrationinstrumentfactory.hpp" />
     <ClInclude Include="ored\model\calibrationinstruments\cpicapfloor.hpp" />
     <ClInclude Include="ored\model\calibrationinstruments\yoycapfloor.hpp" />
@@ -263,6 +264,7 @@
     <ClCompile Include="ored\marketdata\inflationcapfloorvolcurve.cpp" />
     <ClCompile Include="ored\marketdata\yieldvolcurve.cpp" />
     <ClCompile Include="ored\model\calibrationbasket.cpp" />
+    <ClCompile Include="ored\model\calibrationconfiguration.cpp" />
     <ClCompile Include="ored\model\calibrationinstrumentfactory.cpp" />
     <ClCompile Include="ored\model\calibrationinstruments\cpicapfloor.cpp" />
     <ClCompile Include="ored\model\calibrationinstruments\yoycapfloor.cpp" />
