--- a/OREAnalytics/OREAnalytics.vcxproj
+++ b/OREAnalytics/OREAnalytics.vcxproj
@@ -40,7 +40,13 @@
     <ClInclude Include="orea\aggregation\cvaspreadsensitivitycalculator.hpp" />
     <ClInclude Include="orea\aggregation\dimcalculator.hpp" />
     <ClInclude Include="orea\aggregation\dimregressioncalculator.hpp" />
+    <ClInclude Include="orea\aggregation\dynamiccreditxvacalculator.hpp" />
+    <ClInclude Include="orea\aggregation\exposureallocator.hpp" />
+    <ClInclude Include="orea\aggregation\exposurecalculator.hpp" />
+    <ClInclude Include="orea\aggregation\nettedexposurecalculator.hpp" />
     <ClInclude Include="orea\aggregation\postprocess.hpp" />
+    <ClInclude Include="orea\aggregation\staticcreditxvacalculator.hpp" />
+    <ClInclude Include="orea\aggregation\xvacalculator.hpp" />
     <ClInclude Include="orea\app\oreapp.hpp" />
     <ClInclude Include="orea\app\parameters.hpp" />
     <ClInclude Include="orea\app\reportwriter.hpp" />
@@ -55,6 +61,7 @@
     <ClInclude Include="orea\cube\npvsensicube.hpp" />
     <ClInclude Include="orea\cube\sensicube.hpp" />
     <ClInclude Include="orea\cube\sensitivitycube.hpp" />
+    <ClInclude Include="orea\engine\cptycalculator.hpp" />
     <ClInclude Include="orea\engine\filteredsensitivitystream.hpp" />
     <ClInclude Include="orea\engine\mporcalculator.hpp" />
     <ClInclude Include="orea\engine\observationmode.hpp" />
@@ -101,7 +108,13 @@
     <ClCompile Include="orea\aggregation\cvaspreadsensitivitycalculator.cpp" />
     <ClCompile Include="orea\aggregation\dimcalculator.cpp" />
     <ClCompile Include="orea\aggregation\dimregressioncalculator.cpp" />
+    <ClCompile Include="orea\aggregation\dynamiccreditxvacalculator.cpp" />
+    <ClCompile Include="orea\aggregation\exposureallocator.cpp" />
+    <ClCompile Include="orea\aggregation\exposurecalculator.cpp" />
+    <ClCompile Include="orea\aggregation\nettedexposurecalculator.cpp" />
     <ClCompile Include="orea\aggregation\postprocess.cpp" />
+    <ClCompile Include="orea\aggregation\staticcreditxvacalculator.cpp" />
+    <ClCompile Include="orea\aggregation\xvacalculator.cpp" />
     <ClCompile Include="orea\app\oreapp.cpp" />
     <ClCompile Include="orea\app\parameters.cpp" />
     <ClCompile Include="orea\app\reportwriter.cpp" />
@@ -111,6 +124,7 @@
     <ClCompile Include="orea\cube\cubeinterpretation.cpp" />
     <ClCompile Include="orea\cube\cubewriter.cpp" />
     <ClCompile Include="orea\cube\sensitivitycube.cpp" />
+    <ClCompile Include="orea\engine\cptycalculator.cpp" />
     <ClCompile Include="orea\engine\filteredsensitivitystream.cpp" />
     <ClCompile Include="orea\engine\mporcalculator.cpp" />
     <ClCompile Include="orea\engine\parametricvar.cpp" />
