[Touch:1264]Matching too much here - intended for sensitivity.csv but matching cva_sensitivity...

--- a/Tools/PythonTools/comparison_config.json
+++ b/Tools/PythonTools/comparison_config.json
@@ -300,7 +300,7 @@
           }
         ]
       },
-      "*sensitivity*": {
+      "sensitivity.csv": {
         "keys": [
           "TradeId",
           "IsPar",
