--- a/Docker/docker-compose-quantlib.yml
+++ b/Docker/docker-compose-quantlib.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   env_quantlib:
-    image: env_quantlib:1.18_e91250ceb
+    image: env_quantlib:1.18_d123ec8c7
     build:
       context: ../
       dockerfile: Docker/Dockerfile-QuantLib
